--- a/src/main/resources/app.fxml
+++ b/src/main/resources/app.fxml
@@ -12,15 +12,18 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.tobiasth.idatt2001.postalregistry.AppController">
    <center>
-      <TableView fx:id="listTable" minWidth="400.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="listTable" minWidth="400.0" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy></TableView>
+         </columnResizePolicy>
+         <BorderPane.margin>
+            <Insets bottom="2.0" left="2.0" right="2.0" />
+         </BorderPane.margin></TableView>
    </center>
    <top>
       <StackPane BorderPane.alignment="CENTER">
          <children>
-            <TextField fx:id="searchField" prefHeight="40.0" promptText="Type a search here">
+            <TextField fx:id="searchField" prefHeight="40.0" promptText="Type here to search">
                <font>
                   <Font size="18.0" />
                </font>
@@ -30,7 +33,7 @@
             </TextField>
             <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER_LEFT">
                <image>
-                  <Image url="@search.png" />
+                  <Image url="@img/search.png" />
                </image>
                <StackPane.margin>
                   <Insets left="10.0" />
@@ -40,12 +43,15 @@
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@clear.png" />
+                        <Image url="@img/clear.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Button>
          </children>
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
       </StackPane>
    </top>
 </BorderPane>
