--- a/src/main/resources/app.fxml
+++ b/src/main/resources/app.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -30,6 +31,9 @@
                <padding>
                   <Insets left="50.0" />
                </padding>
+               <StackPane.margin>
+                  <Insets right="40.0" />
+               </StackPane.margin>
             </TextField>
             <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER_LEFT">
                <image>
@@ -47,6 +51,30 @@
                      </image>
                   </ImageView>
                </graphic>
+               <StackPane.margin>
+                  <Insets right="40.0" />
+               </StackPane.margin>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="helpButton" alignment="CENTER" mnemonicParsing="false" style="-fx-background-color: none;" StackPane.alignment="CENTER_RIGHT">
+               <graphic>
+                  <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@img/help.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets bottom="-3.0" left="-3.0" right="-3.0" top="-3.0" />
+               </padding>
+               <StackPane.margin>
+                  <Insets right="3.0" />
+               </StackPane.margin>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
          </children>
          <BorderPane.margin>
